force-app/main/default/objects/affectlayer__AffectLayer_User_Setting__c/affectlayer__AffectLayer_User_Setting__c.object-meta.xml
<CustomObject>
    <label>AffectLayer User Setting</label>
    <nameField>
        <displayFormat>US-{0}</displayFormat>
        <label>User Setting Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AffectLayer User Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>