force-app/main/default/objects/affectlayer__AffectLayer_User_Setting__c/fields/affectlayer__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>