force-app/main/default/objects/affectlayer__AffectLayer_User_Setting__c/fields/affectlayer__Selected__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Selected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>