force-app/main/default/objects/affectlayer__AffectLayer_User_Setting__c/fields/affectlayer__Type__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caller Id</fullName>
            </value>
            <value>
                <fullName>Callback Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>