force-app/main/default/objects/affectlayer__AffectLayer_User_Setting__c/fields/affectlayer__User__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>